// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`job summary > renders a failing report 1`] = `
"## 🌍 xcstrings-lint — failed

2 blocking issues, 1 language below the 100% threshold.

Checked 1 file — 1 catalog across 2 languages.

### Issues

| Languages | Missing | Empty | Total |
|---|---|---|---|
| \`fr\` | 1 | 1 | **2** |

<details><summary><b>Missing translations</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_save_card_subtitle\` | \`fr\` |

</details>

<details><summary><b>Empty values</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_cvv_hint\` | \`fr\` |

</details>

### Coverage

| Language | Coverage | Translated | Threshold | Status |
|---|---|---|---|---|
| \`de\` | 100% | 3 / 3 | 100% | ✓ |
| \`fr\` | 33.3% | 1 / 3 | 100% | ✕ below |"
`;

exports[`job summary > renders a threshold-only report 1`] = `
"## 🌍 xcstrings-lint — failed

1 language below the 100% threshold.

Checked 1 file — 1 catalog across 2 languages.

### Coverage

| Language | Coverage | Translated | Threshold | Status |
|---|---|---|---|---|
| \`de\` | 100% | 2 / 2 | 100% | ✓ |
| \`fr\` | 50% | 1 / 2 | 100% | ✕ below |"
`;

exports[`sticky comment > renders a failing report 1`] = `
"### 🌍 xcstrings-lint — **failed**

**2 issues** — 2 keys across 1 language.

| Languages | Missing | Empty | Total |
|---|---|---|---|
| \`fr\` | 1 | 1 | **2** |

<details><summary><b>Missing translations</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_save_card_subtitle\` | \`fr\` |

</details>

<details><summary><b>Empty values</b> · 1</summary>

| Key | Languages |
|---|---|
| \`payment_cvv_hint\` | \`fr\` |

</details>

<sub>1 file checked · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a passing report 1`] = `
"### 🌍 xcstrings-lint — **passed**

Every language is fully translated across 1 file.

<sub>1 file checked · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a passing report that carries warnings 1`] = `
"### 🌍 xcstrings-lint — **passed**

Every language is fully translated across 1 file.

<details><summary><b>Warnings</b> · 2 — not blocking</summary>

**Duplicate source strings** · 1

- \`checkout_title\` — "checkout_title" has the same source text as "cart_title"

**Orphan keys** · 1

- \`dropped_key\` — "dropped_key" has no en source string, but is translated into de, fr

</details>

<sub>1 file checked · 2 warnings · <!-- xcstrings-lint --></sub>"
`;

exports[`sticky comment > renders a report that only misses the coverage threshold 1`] = `
"### 🌍 xcstrings-lint — **failed**

**1 language** below the 100% threshold: \`fr\` at 50%.

<sub>1 file checked · <!-- xcstrings-lint --></sub>"
`;
